Fixed a CSS issue showing on Firefox

--- a/src/LinksPage.css
+++ b/src/LinksPage.css
@@ -45,7 +45,7 @@
     padding-left: 0px;
     padding-right: 60px;
     padding-top: 10px;
-    padding-bottom: 30px;
+    /* padding-bottom: 30px; */
 }
 
 .links_official {
