--- a/src/Topics.css
+++ b/src/Topics.css
@@ -32,6 +32,10 @@
     color: gray;
 }
 
+#search_input {
+    max-width: 125px;
+}
+
 
 
 
